force-app/main/default/objects/ssot__LearningOutcomeItem__dlm/fields/ssot__MinimumNumericGradeNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MinimumNumericGradeNumber__c</fullName>
    <label>Minimum Numeric Grade</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MinimumNumericGradeNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>