force-app/main/default/objects/ssot__LearningOutcomeItem__dlm/fields/ssot__rel_1719819884819_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819884819_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearningOutcomeItem_LearningId_map_L_rel</label>
    <referenceTo>ssot__Learning__dlm</referenceTo>
    <relationshipLabel>LearningOutcomeItem_LearningId_map_L_rel</relationshipLabel>
    <relationshipName>rel_1719819884819_end</relationshipName>
    <type>Lookup</type>
</CustomField>