force-app/main/default/objects/ssot__LearningOutcomeItem__dlm/fields/ssot__rel_1719819887171_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819887171_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearningOutcomeItem_LearningAchievem_rel</label>
    <referenceTo>ssot__LearningAchievement__dlm</referenceTo>
    <relationshipLabel>LearningOutcomeItem_LearningAchievem_rel</relationshipLabel>
    <relationshipName>rel_1719819887171_end</relationshipName>
    <type>Lookup</type>
</CustomField>